# Localthinking

./: .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  查看构建日志指南.txt  清除数据指南.txt
.cargo/: config.toml
.github/workflows/: build.yml  collect-logs.yml  diagnose.yml  release.yml
docs/: GitHub-Actions构建指南.md  GitHub-Actions错误收集指南.md  构建状态报告.md
docs/screenshots/: README.md
docs/video-scripts/: 60秒项目介绍.md  README.md  录制素材清单.md  音乐和音效推荐.md
scripts/: clang-wrapper.sh  clangpp-wrapper.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  apply_llama_patch.sh  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: api.rs  backend.rs  cache.rs  chat.rs  commands.rs  engine.rs  lib.rs  main.rs  models.rs  monitoring.rs  recommender.rs  sysinfo.rs  virtual_memory.rs
src/components/: Chat.tsx  DownloadProgress.tsx  FeedbackManager.css  FeedbackManager.tsx  MessageBubble.tsx  ModelManager.module.css  ModelManager.tsx  ModelRecommender.css  ModelRecommender.tsx  PerformanceMonitor.module.css  PerformanceMonitor.tsx  Settings.css  Settings.tsx  modelManagerUtils.ts  settingsPrompts.ts
src/hooks/: useChat.ts  useDownload.ts  useModel.ts  useSettings.ts  useSettingsRuntime.ts
src/store/: chatStore.ts  index.ts  modelStore.ts  settingsStore.ts
src/styles/: global.css  reset.css
src/tests/: MessageBubble.test.tsx  SearchBar.test.tsx  SessionList.test.tsx  chatStore.test.ts  messageContentParser.test.ts  modelCompatibility.test.ts  modelManagerUtils.test.ts  searchUtils.test.ts  sessionTimeline.test.ts  (+3 more)
(+66 files in other folders)
