[package]
name    = "local_thinking"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = []

[lib]
name = "local_thinking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
llama-cpp-2     = { version = "0.1", features = ["sampler"] }
encoding_rs     = "0.8"           # 用于 token 转字符串的编码器
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
reqwest         = { version = "0.12", features = ["stream", "json"] }
futures-util    = "0.3"
anyhow          = "1"
num_cpus        = "1"             # 读取 CPU 核心数，用于自动设置线程数
sysinfo         = "0.30"          # 跨平台硬件信息检测
axum            = { version = "0.7", features = ["macros"] }  # HTTP API 服务器
tower           = "0.4"           # Tower 中间件
tower-http      = { version = "0.5", features = ["cors"] }  # CORS 支持
http            = "1"             # HTTP 类型
http-body-util  = "0.1"          # HTTP body utilities
dirs            = "5"             # 获取系统目录路径

[profile.release]
lto           = true            # 链接时优化，显著提升性能
codegen-units = 1               # 单编译单元，最大化优化
opt-level     = 3               # 最高优化级别
strip         = true            # 移除符号表，减小二进制大小
panic         = "abort"         # 减小二进制大小
